<resources>
    <string name="app_name">Test_Two</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_page2">MainPage2Activity</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="text">这是一个</string>
    <string name="button">button</string>
</resources>
